--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/code-warrior/assignment-1--intro-to-internet-programming--cs-275--fall-2022.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Fiona Morrissey",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/code-warrior/assignment-1--intro-to-internet-programming--cs-275--fall-2022/issues"
