--- a/package.json
+++ b/package.json
@@ -18,15 +18,17 @@
   },
   "homepage": "https://github.com/code-warrior/assignment-1--intro-to-internet-programming--cs-275--fall-2022#readme",
   "dependencies": {
-    "eslint": "^8.12.0",
+    "@babel/preset-env": "^7.20.2",
+    "babel": "^6.23.0",
     "gulp": "^4.0.2",
+    "gulp-babel": "^8.0.0",
+    "gulp-eslint": "^6.0.0",
     "gulp-htmlmin": "^5.0.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
     "browser-sync": "^2.27.10",
-    "gulp-babel": "^7.0.1",
     "gulp-clean-css": "^4.3.0",
     "gulp-jsvalidate": "^5.0.0",
     "gulp-minify": "^3.1.0",
