--- a/package.json
+++ b/package.json
@@ -17,18 +17,16 @@
     "url": "https://github.com/code-warrior/assignment-1--intro-to-internet-programming--cs-275--fall-2022/issues"
   },
   "homepage": "https://github.com/code-warrior/assignment-1--intro-to-internet-programming--cs-275--fall-2022#readme",
-  "dependencies": {
-    "@babel/present-env":"7.19.3",
-    "eslint": "^8.12.0"
-  },
-  
   "devDependencies": {
+    "@babel/core": "^7.15.8",
+    "@babel/preset-env": "^7.15.8",
+    "babel-preset-env": "^1.7.0",
     "browser-sync": "^2.27.10",
+    "eslint": "^8.27.0",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
-    "gulp-clean-css": "4.3.0",
+    "gulp-clean-css": "^4.3.0",
     "gulp-eslint": "^6.0.0",
-    "gulp-html": "5.0.0",
     "gulp-htmlmin": "^5.0.1",
     "gulp-uglify": "^3.0.2"
   }
